@@ -1,5 +1,6 @@
 CHANGES IN FLTK 1.1.7
 
+	- Fixes to Fl_JPEG_Image error handler.
 	- Fl_Menu::popup() and ::pulldown() would crash an
 	  application if a callback created widgets before they
 	  returned (STR #685)
